Finished API Doc on User
